# NLD

./: README.md  mill_samp.py  new_fast.py  new_opti.ipynb  nld.jl  nld.py  nld_paralllel.py
2D/: 2D.ipynb  2D.py  2D_new.ipynb
Gpu/: README.md  nld.jl  nld_1d_cuda.jl  nld_overlap.jl
Julia/: Den_decay.jl  README.md  nld.jl  nld_1D.jl  nld_1D_without_allocation.jl  nld_1d_non_random_updates.jl
Julia Modules/: Package Structure
Julia Modules/NonLinear1DSimulator/: Project.toml
Julia Modules/NonLinear1DSimulator/src/: Config.jl  NonLinear1DSimulator.jl  Simulation.jl  Update.jl  Utils.jl
nld_rust/: Cargo.toml  README.md
nld_rust/benches/: with_threads.rs
nld_rust/src/: lib.rs  main.rs
old/: mill_samp.py  nld.py  q2t const.ipynb  vectorized.py
